[package]
name = "scream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
sha2 = "0.10.6"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["io-util"] }
