[package]
name = "scream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
sha2 = "0.10.6"
md5 = "0.7.0"
hex = "0.4.3"
futures = "0.3.25"
num_cpus = "1.14.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["io-util"] }

[profile.release]
opt-level = 3
debug = true
lto = true

[profile.devrel]
inherits = "release"
opt-level = 2
lto = "thin"
